# ohua-rust-runtime

./: .gitignore  .travis.yml  Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: io_stuff.rs  main.rs
ohua_codegen/: Cargo.toml
ohua_codegen/src/: backend_optimizations.rs  errors.rs  lang.rs  lib.rs  ohua_types.rs  ohuac.rs  parse.rs  runtime.rs  typedgen.rs
ohua_codegen/src/codegen/: mod.rs  modgen.rs  typedgen.rs
ohua_codegen/src/codegen/operators/: tuple.rs
ohua_codegen/src/codegen/templates/: types.rs
ohua_codegen/src/codegen/templates/snippets/: mainarg.in  wrapper.in
ohua_codegen/src/type_extract/: parser.rs
ohua_runtime/: Cargo.toml
ohua_runtime/src/: arcs.rs  lang.rs  lib.rs
src/: comp_errors.rs  errors.rs  integration.rs  lib.rs  main.rs  modgen.rs  ohua_types.rs  ohuac.rs  runtime_data.rs  typecasts.rs  types.rs  wrappers.rs
src/codegen/: mod.rs  modgen.rs  runtime_data.rs  typecasts.rs  typedgen.rs  types.rs  wrappers.rs
src/ohua/: lang.rs
src/templates/: generictype.rs  main.rs  mod.rs  runtime.rs  types.rs  wrappers.rs
src/type_extract/: algo_io_imports.rs  mod.rs  parser.rs
test-resources/: simple_example.ohuac  simple_example.ohuao  some_ns.ohuao
test-resources/manual-test-case/: Cargo.toml  README.md
testcases/: Cargo.toml  README.md  build.rs  run_tests.sh
testcases/argument_clone/: Cargo.toml  argument_clone.ohuac  argument_clone.ohuao
testcases/correct_sender_placement/: Cargo.toml  correct_sender_placement.ohuac
testcases/custom_types/: Cargo.toml  custom_types.ohuac  custom_types.ohuao  (+1 more)
(+175 files in other folders)
