[package]
name = "ohua_codegen"
version = "0.1.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Sebastian Ertel <sebastian.ertel@gmail.com>"]
edition = "2015"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tempdir = "0.3"
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6" # same version as in syn
proc-macro2 = "0.4"

[lib]
proc-macro = true
